KLS-1228: fixes title link jumpyness issue and setup design system

--- a/styles/great/_utils.scss
+++ b/styles/great/_utils.scss
@@ -702,12 +702,13 @@ img.richtext-image {
 }
 
 .great-title-link {
+  border-top: 2px solid transparent;
+  border-bottom: 2px solid transparent;
+  display: inline-block;
   text-decoration: underline;
+
   &:hover:not(:focus) {
-    text-decoration-thickness: 3px;
     color: #003078;
-  }
-  &:focus {
-    display: inline;
+    text-decoration-thickness: 3px;
   }
 }
